--- a/tasks/system/docker.yml
+++ b/tasks/system/docker.yml
@@ -12,9 +12,13 @@
 
 - name: All - Install docker compose {{ docker_compose_version }}
   ansible.builtin.get_url:
-    url: "https://github.com/docker/compose/releases/download/v{{ docker_compose_version }}/docker-compose-{{ ansible_system | lower }}-{{ ansible_machine }}"
+    url: "https://github.com/docker/compose/releases/download/\
+          v{{ docker_compose_version }}/\
+          docker-compose-{{ ansible_system | lower }}-{{ ansible_machine }}"
     dest: /usr/local/lib/docker/cli-plugins/docker-compose
-    checksum: "sha256:https://github.com/docker/compose/releases/download/v{{ docker_compose_version }}/docker-compose-{{ ansible_system | lower }}-{{ ansible_machine }}.sha256"
+    checksum: "sha256:https://github.com/docker/compose/releases/download/\
+              v{{ docker_compose_version }}/\
+              docker-compose-{{ ansible_system | lower }}-{{ ansible_machine }}.sha256"
     mode: '0755'
 
 - name: All - Enable execue for docker compose
