--- a/tasks/system/redhat/docker.yml
+++ b/tasks/system/redhat/docker.yml
@@ -2,7 +2,9 @@
 # Docker support for new fedora releases is always behind
 - name: RedHat - Check for Docker support
   ansible.builtin.uri:
-    url: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/{{ ansible_distribution_major_version|int }}/{{ ansible_architecture }}/stable/repodata/repomd.xml"
+    url: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/\
+          {{ ansible_distribution_major_version|int }}/\
+          {{ ansible_architecture }}/stable/repodata/repomd.xml"
   register: uri_docker_repo_metadata
   ignore_errors: true
 
@@ -33,8 +35,13 @@
   ansible.builtin.yum_repository:
     file: docker-ce
     name: docker-ce-stable
-    description: "Docker CE Stable - {{ ansible_distribution }} - {{ ansible_distribution_major_version|int - 1 }} - $basearch"
-    baseurl: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/{{ ansible_distribution_major_version|int - 1 }}/$basearch/stable"
+    description: >
+      Docker CE Stable
+      - {{ ansible_distribution }}
+      - {{ ansible_distribution_major_version|int - 1 }}
+      - $basearch
+    baseurl: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/\
+              {{ ansible_distribution_major_version|int - 1 }}/$basearch/stable"
     enabled: true
     gpgcheck: true
     gpgkey: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
