--- a/tasks/system/redhat/fedora/razer.yml
+++ b/tasks/system/redhat/fedora/razer.yml
@@ -2,7 +2,8 @@
 - name: Fedora - Import Razer signing key
   ansible.builtin.rpm_key:
     state: present
-    key: "https://download.opensuse.org/repositories/hardware:/razer/Fedora_{{ ansible_distribution_major_version|int }}/repodata/repomd.xml.key"
+    key: "https://download.opensuse.org/repositories/hardware:/razer/\
+          Fedora_{{ ansible_distribution_major_version|int }}/repodata/repomd.xml.key"
     fingerprint: "{{ signing_keys.razer_fedora[ansible_distribution_major_version].fingerprint }}"
   register: rpm_key_razer
   ignore_errors: true
@@ -12,10 +13,12 @@
     file: razer
     name: razer
     description: Razer drivers (Fedora {{ ansible_distribution_major_version|int }})
-    baseurl: "https://download.opensuse.org/repositories/hardware:/razer/Fedora_{{ ansible_distribution_major_version|int }}/"
+    baseurl: "https://download.opensuse.org/repositories/hardware:/razer/\
+              Fedora_{{ ansible_distribution_major_version|int }}/"
     enabled: true
     gpgcheck: true
-    gpgkey: "https://download.opensuse.org/repositories/hardware:/razer/Fedora_{{ ansible_distribution_major_version|int }}/repodata/repomd.xml.key"
+    gpgkey: "https://download.opensuse.org/repositories/hardware:/razer/\
+            Fedora_{{ ansible_distribution_major_version|int }}/repodata/repomd.xml.key"
     repo_gpgcheck: true
   when:
     - ansible_distribution_major_version|int >= 32
