--- a/tasks/system/redhat/fedora/repositories.yml
+++ b/tasks/system/redhat/fedora/repositories.yml
@@ -32,7 +32,8 @@
 - name: Fedora - Add RPMFusion-free repository
   ansible.builtin.dnf:
     name:
-      - https://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-{{ ansible_distribution_major_version|int }}.noarch.rpm
+      - "https://download1.rpmfusion.org/free/fedora/\
+        rpmfusion-free-release-{{ ansible_distribution_major_version|int }}.noarch.rpm"
     state: present
   when: (not rpmfusion_free_repo.stat.exists) or
         (not rpmfusion_free_updates_repo.stat.exists)
@@ -50,7 +51,8 @@
 - name: Fedora - Add RPMFusion-nonfree repository
   ansible.builtin.dnf:
     name:
-      - https://download1.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-{{ ansible_distribution_major_version|int }}.noarch.rpm
+      - "https://download1.rpmfusion.org/nonfree/fedora/\
+        rpmfusion-nonfree-release-{{ ansible_distribution_major_version|int }}.noarch.rpm"
     state: present
   when: (not rpmfusion_nonfree_repo.stat.exists) or
         (not rpmfusion_nonfree_updates_repo.stat.exists)
@@ -90,14 +92,16 @@
 - name: Fedora <=25 - Add MySQL community repository
   ansible.builtin.dnf:
     name:
-      - "https://dev.mysql.com/get/mysql57-community-release-fc{{ ansible_distribution_major_version|int }}-10.noarch.rpm"
+      - "https://dev.mysql.com/get/mysql57-community-release\
+        -fc{{ ansible_distribution_major_version|int }}-10.noarch.rpm"
     state: present
   when: ansible_distribution_major_version|int <= 25
 
 - name: Fedora 26,27 - Add MySQL community repository
   ansible.builtin.dnf:
     name:
-      - "https://dev.mysql.com/get/mysql80-community-release-fc{{ ansible_distribution_major_version|int }}-1.noarch.rpm"
+      - "https://dev.mysql.com/get/mysql80-community-release\
+        -fc{{ ansible_distribution_major_version|int }}-1.noarch.rpm"
     state: present
   when:
     - ansible_distribution_major_version|int >= 26
