debian: make ripgrep an optional package

--- a/tasks/system/debian/packages.yml
+++ b/tasks/system/debian/packages.yml
@@ -43,6 +43,7 @@
     - exa
     - fd-find
     - neofetch
+    - ripgrep
   failed_when: false
 
 - name: Debian - Best effort to install remote packages
