--- a/tasks/system/debian/ubuntu/packages.yml
+++ b/tasks/system/debian/ubuntu/packages.yml
@@ -18,3 +18,10 @@
       - python3-testresources
     state: present
   when: ansible_distribution_major_version | int >= 20
+
+- name: Ubuntu >=22 - Install packages
+  ansible.builtin.apt:
+    pkg:
+      - podman
+    state: present
+  when: ansible_distribution_major_version | int >= 22
