arch: add starship CLI prompt

--- a/tasks/system/archlinux/packages.yml
+++ b/tasks/system/archlinux/packages.yml
@@ -29,6 +29,7 @@
     - python-psutil
     - ripgrep
     - shellcheck
+    - starship  # CLI prompt
     - tk  # windowing toolkit needed for gitk
     - tree
     - wget
