--- a/setup.yml
+++ b/setup.yml
@@ -106,6 +106,11 @@
         path: /run/systemd/system/
       register: stat_run_systemd
 
+    # Not all packages can be installed in WSL
+    - name: All - Check if running in WSL
+      ansible.builtin.set_fact:
+        running_in_wsl: "{{ ansible_kernel.endswith('-WSL') or ansible_kernel.endswith('-WSL2') }}"
+
     ### --- System ---
     - name: Repositories
       tags: [system, dev, repo]
