all: add retries to package install

--- a/tasks/system/archlinux/packages.yml
+++ b/tasks/system/archlinux/packages.yml
@@ -3,6 +3,8 @@
   community.general.pacman:
     name: "{{ item }}"
     state: present
+  retries: 5
+  delay: 5
   loop:
     - bash
     - bash-completion
