--- a/tasks/system/redhat/fedora/packages.yml
+++ b/tasks/system/redhat/fedora/packages.yml
@@ -3,6 +3,8 @@
   ansible.builtin.dnf:
     name: "{{ item }}"
     state: present
+  retries: 5
+  delay: 5
   loop:
     - bat  # rust version of cat
     - code  # VSCode
