--- a/tasks/system/debian/ubuntu/packages.yml
+++ b/tasks/system/debian/ubuntu/packages.yml
@@ -1,27 +1,34 @@
 ---
 - name: Ubuntu >=18 - Install packages
   ansible.builtin.apt:
-    pkg:
-      - 1password
-      - 1password-cli
-      - flameshot
-      - npm
-      - libasound2
+    pkg: "{{ item }}"
     state: present
+  retries: 5
+  delay: 5
   when: ansible_distribution_major_version | int >= 18
+  loop:
+    - flameshot
+    - libasound2
+    - npm
 
 - name: Ubuntu >=20 - Install packages
   ansible.builtin.apt:
-    pkg:
-      - python3-cairo
-      - python3-launchpadlib
-      - python3-testresources
+    pkg: "{{ item }}"
     state: present
+  retries: 5
+  delay: 5
   when: ansible_distribution_major_version | int >= 20
+  loop:
+    - python3-cairo
+    - python3-launchpadlib
+    - python3-testresources
 
 - name: Ubuntu >=22 - Install packages
   ansible.builtin.apt:
-    pkg:
-      - podman
+    pkg: "{{ item }}"
     state: present
+  retries: 5
+  delay: 5
   when: ansible_distribution_major_version | int >= 22
+  loop:
+    - podman
