all: add ffmpeg to improve video playback

--- a/tasks/system/debian/packages.yml
+++ b/tasks/system/debian/packages.yml
@@ -13,6 +13,7 @@
     - bat  # rust version of cat
     - crudini
     - dconf-cli
+    - ffmpeg  # Improves video playback
     - flatpak
     - fonts-symbola
     - gdb
