--- a/tasks/system/redhat/centos/repositories.yml
+++ b/tasks/system/redhat/centos/repositories.yml
@@ -7,9 +7,10 @@
   register: rpm_key_epel
 
 - name: CentOS - Install EPEL repository
-  dnf:
+  ansible.builtin.dnf:
     name:
-      - https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ ansible_distribution_major_version|int }}.noarch.rpm
+      - "https://dl.fedoraproject.org/pub/epel/epel-release-latest-\
+        {{ ansible_distribution_major_version | int }}.noarch.rpm"
     state: present
 
 - name: CentOS - rpm keys for Google
