all: move playbooks out of the root

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ stages:
   - deploy
 
 variables:
-  ANSIBLE_CONFIG: "./config/ansible.cfg"
+  ANSIBLE_CONFIG: "./playbooks/config/ansible.cfg"
   ANSIBLE_FORCE_COLOR: "1"
   # https://bixense.com/clicolors/ standard for enabling colours in CI
   CLICOLOR: "1"
