all: combine bins and application tasks

--- a/playbooks/tasks/user/applications.yml
+++ b/playbooks/tasks/user/applications.yml
@@ -24,6 +24,17 @@
     - name: README.md
       mode: '0600'
 
+- name: All - Link user scripts
+  ansible.builtin.file:
+    src: "files/home/user/bin/{{ item }}"
+    dest: "$HOME/bin/{{ item }}"
+    state: link
+  loop:
+    - aws_iam_to_ses.py
+    - create-bootable-usb.bash
+    - install-aws.bash
+    - install-nvidia.bash
+
 # For user systemd
 # https://www.freedesktop.org/software/systemd/man/file-hierarchy.html#Home%20Directory
 - name: All - Create ~/.local/bin
