--- a/playbooks/tasks/user/ui.yml
+++ b/playbooks/tasks/user/ui.yml
@@ -10,6 +10,10 @@
       value: 'true'
     - key: /org/cinnamon/enable-indicators
       value: 'true'
+    - key: /org/cinnamon/panels-enabled
+      value: ['1:0:top', '2:1:top']
+    - key: /org/cinnamon/panels-height
+      value: ['1:26', '2:26']
     - key: /org/gnome/desktop/interface/monospace-font-name
       value: "'Inconsolata 14'"
     - key: /org/nemo/preferences/date-format
