--- a/playbooks/tasks/user/flatpaks.yml
+++ b/playbooks/tasks/user/flatpaks.yml
@@ -6,18 +6,21 @@
     flatpakrepo_url: https://flathub.org/repo/flathub.flatpakrepo
     method: user
 
-- name: All - Create user systemd config directory
+- name: All - Create user systemd directories
   ansible.builtin.file:
-    path: $HOME/.config/systemd/user
+    path: "$HOME/{{ item }}"
     state: directory
-    mode: '0755'
+    mode: '0700'
+  loop:
+    - .config/systemd
+    - .config/systemd/user
 
 - name: All - Add flatpak auto updates
   diff: true
   ansible.builtin.copy:
     src: files/home/user/.config/systemd/user/{{ item }}
     dest: $HOME/.config/systemd/user/{{ item }}
-    mode: '0644'
+    mode: '0600'
   notify: systemctl --user daemon-reload
   loop:
     - flatpak-update.service
