all: migrate mcode script into scripts repo

--- a/playbooks/tasks/user/applications.yml
+++ b/playbooks/tasks/user/applications.yml
@@ -26,6 +26,7 @@
     - create-bootable-usb.bash
     - install-aws.bash
     - install-nvidia.bash
+    - mcode.bash
 
 # For user systemd
 # https://www.freedesktop.org/software/systemd/man/file-hierarchy.html#Home%20Directory
