all: fix ansible-lint errors

--- a/playbooks/flatpaks.yml
+++ b/playbooks/flatpaks.yml
@@ -14,7 +14,7 @@
       tags: [user]
       ansible.builtin.import_tasks: tasks/user/flatpaks.yml
   handlers:
-    - name: systemctl --user daemon-reload
+    - name: Reload systemd --user
       ansible.builtin.systemd:
         daemon_reload: true
         scope: user
