all: add additional support for podman

--- a/playbooks/tasks/system/archlinux/packages.yml
+++ b/playbooks/tasks/system/archlinux/packages.yml
@@ -29,6 +29,8 @@
     - nodejs
     - npm
     - podman
+    - podman-compose  # emulate docker-compose
+    - podman-docker  # emulate docker
     - python-psutil
     - ripgrep
     - shellcheck
