--- a/playbooks/tasks/system/redhat/packages.yml
+++ b/playbooks/tasks/system/redhat/packages.yml
@@ -62,6 +62,8 @@
     - patch
     - pcp-system-tools  # dstat
     - perl
+    - podman
+    - podman-docker  # emulate docker
     - python3-dbus
     - readline-devel
     - redhat-rpm-config
