--- a/playbooks/tasks/system/redhat/fedora/packages.yml
+++ b/playbooks/tasks/system/redhat/fedora/packages.yml
@@ -28,7 +28,8 @@
     - mozilla-fira-fonts-common
     - mozilla-fira-mono-fonts
     - mozilla-fira-sans-fonts
-    - podman
+    # TODO: move this to redhat when centos gets support
+    - podman-compose  # emulate docker-compose
     - python3-psutil
     - ShellCheck
     - sqlitebrowser
