all: remove the extra setup ability for docker

--- a/playbooks/tasks/system/debian/packages.yml
+++ b/playbooks/tasks/system/debian/packages.yml
@@ -25,6 +25,7 @@
     - lynis  # Security scanning tool
     - nodejs
     - pkg-config
+    - podman
     - python3-dbus
     - python3-psutil
     - seahorse  # key management
