redhat: add support for viewing webp images

--- a/playbooks/tasks/system/redhat/packages.yml
+++ b/playbooks/tasks/system/redhat/packages.yml
@@ -75,6 +75,7 @@
     - tree
     - unzip
     - virt-what
+    - webp-pixbuf-loader  # Allows for viewing of webp images
     - wget
     - xz
     - xz-devel
