--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ workflow:
   stage: build
   image:
     # debug image has a shell
-    name: gcr.io/kaniko-project/executor:v1.8.1-debug
+    name: gcr.io/kaniko-project/executor:v1.9.0-debug
     entrypoint: [""]
   needs:
     - job: lint:shellcheck
@@ -68,12 +68,8 @@ workflow:
     - allow_failure: true
 
 build:linter:
-  stage: build
-  image:
-    # debug image has a shell
-    name: gcr.io/kaniko-project/executor:v1.8.1-debug
-    entrypoint: [""]
-  needs: []
+  extends:
+    - .build_img
   script:
     - mkdir -p /kaniko/.docker
     - |
